force-app/main/default/objects/leaseworks__Asset_Review_Items__c/leaseworks__Asset_Review_Items__c.object-meta.xml
<CustomObject>
    <description>Items of the Asset Review
[MODULE: NA]
[LOAD: No]
[PREREQUISITES: NA]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Z_unused_2012 Review Item</label>
    <nameField>
        <label>Z_unused_2012Review Item ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Z_unused_2012 Review Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>