force-app/main/default/objects/leaseworks__Asset_Review_Items__c/fields/leaseworks__Item_Zone__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Item_Zone__c</fullName>
    <label>Zone/Section</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EXT - EMPENNAGE</fullName>
            </value>
            <value>
                <fullName>EXT - FUSELAGE</fullName>
            </value>
            <value>
                <fullName>EXT - LDG&amp;WHEELS</fullName>
            </value>
            <value>
                <fullName>EXT - WINGS</fullName>
            </value>
            <value>
                <fullName>INT - CARGO COMPTS</fullName>
            </value>
            <value>
                <fullName>INT - COCKPIT</fullName>
            </value>
            <value>
                <fullName>INT - LAVATORIES</fullName>
            </value>
            <value>
                <fullName>INT - PASSENGER CABINS</fullName>
            </value>
            <value>
                <fullName>INT - UTILITY AREAS (GALLEYS)</fullName>
            </value>
            <value>
                <fullName>A. Certificates</fullName>
            </value>
            <value>
                <fullName>B. Maintenance Summaries</fullName>
            </value>
            <value>
                <fullName>C. Maintenance Records</fullName>
            </value>
            <value>
                <fullName>D. Configuration</fullName>
            </value>
            <value>
                <fullName>E. Manufacturer Records</fullName>
            </value>
            <value>
                <fullName>F. Engine Records</fullName>
            </value>
            <value>
                <fullName>G. APU Records</fullName>
            </value>
            <value>
                <fullName>H. Components Records</fullName>
            </value>
            <value>
                <fullName>I. Landing Gear Records</fullName>
            </value>
            <value>
                <fullName>J. Manuals</fullName>
            </value>
            <value>
                <fullName>K. Propellers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>