force-app/main/default/objects/leaseworks__Asset_Review_Items__c/fields/leaseworks__Review_Item_Status__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Review_Item_Status__c</fullName>
    <label>Review Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IN PROGRESS</fullName>
                <default>true</default>
                <label>IN PROGRESS</label>
            </value>
            <value>
                <fullName>COMPLETED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>