force-app/main/default/objects/leaseworks__Asset_Review_Items__c/fields/leaseworks__Total_Findings__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_Findings__c</fullName>
    <label>Total Findings</label>
    <summaryForeignKey>leaseworks__Asset_Review_Findings__c.leaseworks__Review_Item__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>