force-app/main/default/objects/leaseworks__Asset_Review_Items__c/recordTypes/leaseworks__Physical_Item.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Physical_Item</fullName>
    <active>true</active>
    <description>Record type for Physical Items</description>
    <label>Physical Item</label>
</RecordType>