force-app/main/default/objects/leaseworks__Asset_Review_Items__c/recordTypes/leaseworks__Records_Item.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Records_Item</fullName>
    <active>true</active>
    <description>Record type for Records Items</description>
    <label>Records Item</label>
</RecordType>